0.5.1  TBD

   - Various performance improvements

0.5.0  2025-08-28

   - Added -o and -n query flags to print a packages dependents
   - The -p query flag no longer causes exit if pkg not installed

0.4.2  2025-08-22

   - Documentation upgrades

0.4.1  2025-08-22

   - Ignore non-existent package dependencies (issue #17)

0.4.0  2025-08-22

   - Use git '--single-branch' opt when cloning SBo repo
   - Add global '-T' flag to do nothing if SBo repo hasn't been cloned
   - Update shell completion to not perform repo cloning (via -T option)
   - Documentation upgrades

0.3.2  2025-08-21

   - Added build command
   - Added '-k' option to the install command to keep built package
   - Removed CLEANUP configuration file option
   - Added '-p' option to search command to print just package PRGNAMs
   - Added shell completion for bash and zsh
   - Documentation upgrades

0.2.2  2025-01-15

   - Simplify solution to #6 by running SlackBuild through open

0.2.1  2025-01-14

   - Minor bug fix

0.2.0  2025-01-14

   - Prevent up-to-date packages from entering install queue without -f
   - Be less wasteful with disk space when teeing command output (see #6)

0.1.5  2024-11-01

   - 'install' and 'remove' commands accept multiple package arguments
   - Added '-a' and '-u' options for the 'query' command
   - 'install' command only installs package if newer version is available
   - Redirect git sync output to STDERR
   - Documentation upgrades

0.0.7  2024-10-28

   - Bug fix in the SlackBuild.

0.0.6  2024-10-21

   - Bug fix in the SlackBuild.

0.0.5  2024-10-21

   - Bug fix.

0.0.4  2024-10-20

   - First release.